--- a/Readme
+++ b/Readme
@@ -14,6 +14,8 @@ django on docker
         build:
             docker build -f Dockerfile.prod -t cmeiiiho/app .
             docker push cmeiiiho/app
+            docker build -f Dockerfile.prod -t cmeiiiho/nginx .
+            docker push cmeiiiho/nginx
         run:
             docker compose pull && docker compose up -d
             docker compose exec web python manage.py migrate --noinput
@@ -52,5 +54,5 @@ docker rmi CONTAINER ID
 docker rmi -f CONTAINER ID
 
 Войти в баш контейнера
-docker exec -it CONTAINER ID sh
+docker exec -it web sh
 
